Navbar spacing fix

--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 .container-fluid {
-    padding-left: 15%;
+    padding: 3% 15%;
 }
  
 .navbar-color {
